--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,26 @@
 galaxy_info:
   author: Sion Smith
-  description: Role to install and configure Cardano
-  company: OSO DevOps
+  role_name: cardano-node
+  description: "Role to install and configure Cardano"
+  company: "OSO DevOps"
   license: MIT
   min_ansible_version: 2.9
   platforms:
     - name: Amazon
       versions:
         - all
-  galaxy_tags: ['Cardano','Linux','Amazon','ADA','systemd']
-
-dependencies: []
+  galaxy_tags:
+    - Cardano
+    - Linux
+    - Amazon
+    - ADA
+    - systemd
+    - development
+    - system
+    - image
+    - box
+    - packer
+    - virtualbox
+    - vagrant
+    - ami
+    - aws
