--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,3 +21,12 @@ libsodium_version_tag:  "66f017f1"
 # Cardano
 cardano_github_url: "https://github.com/input-output-hk/cardano-node.git"
 cardano_version_tag: "tags/1.14.2"
+cardano_install_dir: "/opt/cardano/cnode"
+cardano_config_dir: "{{ cardano_install_dir }}/configuration"
+cardano_scripts_dir: "{{ cardano_install_dir }}/scripts"
+cardano_default_port: "3000" # Amend if running relay and producer on same box
+
+# Shelly Testnet Configuration
+cardano_shelly_test_config: "https://hydra.iohk.io/build/3246637/download/1/shelley_testnet-config.json"
+cardano_shelly_test_genesis: "https://hydra.iohk.io/build/3246637/download/1/shelley_testnet-genesis.json"
+cardano_shelly_test_topology: "https://hydra.iohk.io/build/3246637/download/1/shelley_testnet-topology.json"
