- added stop script to correctly kill the process using systemd - updated service definition to remove unused config

--- a/files/cardano.service
+++ b/files/cardano.service
@@ -8,13 +8,11 @@ Wants=network-online.target
 Type=simple
 PrivateTmp=true
 ExecStart=/opt/cardano/cnode/scripts/start-node.sh
+ExecStop=/opt/cardano/cnode/scripts/stop-node.sh
 PIDFile=/run/cardano/%i.pid
-ExecReload=/bin/kill -HUP $MAINPID
-CapabilityBoundingSet=CAP_IPC_LOCK
 User=cardano
 Group=cardano
 ProtectHome=true
-KillMode=process
 Restart=on-failure
 StartLimitBurst=3
 StartLimitInterval=60s
