--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,6 +22,7 @@ libsodium_version_tag:  "66f017f1"
 cardano_github_url: "https://github.com/input-output-hk/cardano-node.git"
 cardano_version_tag: "tags/1.14.2"
 cardano_install_dir: "/opt/cardano/cnode"
+cardamo_cli_path: "cardano-cli"
 cardano_config_dir: "{{ cardano_install_dir }}/configuration"
 cardano_scripts_dir: "{{ cardano_install_dir }}/scripts"
 cardano_config_filename: "shelley_testnet-config.json"
@@ -34,3 +35,4 @@ cardano_node_type: "relay"
 cardano_shelly_test_config: "https://hydra.iohk.io/build/3246637/download/1/shelley_testnet-config.json"
 cardano_shelly_test_genesis: "https://hydra.iohk.io/build/3246637/download/1/shelley_testnet-genesis.json"
 cardano_shelly_test_topology: "https://hydra.iohk.io/build/3246637/download/1/shelley_testnet-topology.json"
+cardano_magic_prefix: "--testnet-magic"
