--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -10,8 +10,11 @@
 - name: "Configure Node | Add environment file to .bashrc"
   lineinfile:
     dest=/home/{{ server_username }}/.bashrc
-    line="source /home/{{ server_username }}/env_vars.sh.j2"
+    line="{{ item }}"
     owner={{ server_username }}
+  with_items:
+    - "source /home/{{ server_username }}/env_vars.sh.j2"
+    - "source {{ cardano_scripts_dir }}/common.sh"
 
 - name: "Configure Node | Create node directory structure"
   file:
@@ -57,7 +60,7 @@
     user: "{{ server_username }}"
     minute: '1'
     hour: '3'
-    job: ". $HOME/.bashrc; /opt/cardano/cnode/scripts/cardano-backup.sh"
+    job: ". $HOME/.bashrc; {{ cardano_scripts_dir }}/cardano-backup.sh"
 
 - name: "Configure Node | Create cronjob to run Cardano to cleanup every 3 days at 0221AM"
   cron:
@@ -66,7 +69,7 @@
     day: '*/3'
     minute: '21'
     hour: '2'
-    job: ". $HOME/.bashrc; /opt/cardano/cnode/scripts/cardano-cleanup.sh"
+    job: ". $HOME/.bashrc; {{ cardano_scripts_dir }}/cardano-cleanup.sh"
 
 - name: "Configure Node | Download config file"
   get_url:
