Revert "Asingleton/cardano updates"

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,12 +6,12 @@ server_username: cardano
 server_hostname: cardano-eu-central-1
 
 # Cabal
-cabal_install_version: 3.4.0.0
+cabal_install_version: 3.2.0.0
 cabal_base_url: "https://downloads.haskell.org"
 cabal_install_url: "{{ cabal_base_url }}/~cabal/cabal-install-{{ cabal_install_version }}/cabal-install-{{ cabal_install_version }}-x86_64-unknown-linux.tar.xz"
 
 # GHC
-ghc_install_version: 9.0.1
+ghc_install_version: 8.6.5
 ghc_install_url: "https://downloads.haskell.org/~ghc/{{ ghc_install_version }}/ghc-{{ ghc_install_version }}-x86_64-deb9-linux.tar.xz"
 
 # Libsodium
@@ -20,21 +20,19 @@ libsodium_version_tag:  "66f017f1"
 
 # Cardano
 cardano_github_url: "https://github.com/input-output-hk/cardano-node.git"
-cardano_version_tag: "tags/1.27.0"
+cardano_version_tag: "tags/1.14.2"
 cardano_install_dir: "/opt/cardano/cnode"
 cardamo_cli_path: "cardano-cli"
 cardano_config_dir: "{{ cardano_install_dir }}/configuration"
 cardano_scripts_dir: "{{ cardano_install_dir }}/scripts"
+cardano_config_filename: "shelley_testnet-config.json"
+cardano_genesis_filename: "shelley_testnet-genesis.json"
+cardano_topology_filename: "shelley_testnet-topology.json"
 cardano_default_port: "3000" # Amend if running relay and producer on same box
+cardano_node_type: "relay"
 
-# Configuration files: testnet
-cardano_config_filename: "testnet-config.json"
-cardano_shelley_genesis_filename: "testnet-shelley-genesis.json"
-cardano_byron_genesis_filename: "testnet-byron-genesis.json"
-cardano_alonzo_genesis_filename: "testnet-alonzo-genesis.json"
-cardano_topology_filename: "testnet-topology.json"
+# Shelly Testnet Configuration
+cardano_shelly_test_config: "https://hydra.iohk.io/build/3246637/download/1/shelley_testnet-config.json"
+cardano_shelly_test_genesis: "https://hydra.iohk.io/build/3246637/download/1/shelley_testnet-genesis.json"
+cardano_shelly_test_topology: "https://hydra.iohk.io/build/3246637/download/1/shelley_testnet-topology.json"
 cardano_magic_prefix: "--testnet-magic"
-cardano_magic_number: "1097911063"
-
-# Configuration sources
-cardano_config_download_path: "https://hydra.iohk.io/job/Cardano/cardano-node/cardano-deployment/latest-finished/download/1"
