Update Cardano version and port
The standard port expected by end users tends to be 3001.
The version does not include "/tags"

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -94,7 +94,7 @@
     repo: "{{ cardano_github_url }}"
     dest: /home/{{ server_username }}/cardano-node
     clone: yes
-    version: "{{ cardano_version_tag }}"
+    version: "{{ cardano_version }}"
     accept_hostkey: yes
   register: repo_download
   become_user: "{{ server_username }}"
