--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,12 +21,12 @@ libsodium_version_tag:  "66f017f1"
 
 # Cardano
 cardano_github_url: "https://github.com/input-output-hk/cardano-node.git"
-cardano_version_tag: "tags/1.27.0"
+cardano_version: "1.27.0"
 cardano_install_dir: "/opt/cardano/cnode"
 cardamo_cli_path: "cardano-cli"
 cardano_config_dir: "{{ cardano_install_dir }}/configuration"
 cardano_scripts_dir: "{{ cardano_install_dir }}/scripts"
-cardano_default_port: "3000" # Amend if running relay and producer on same box
+cardano_default_port: "3001" # Amend if running relay and producer on same box
 
 # Configuration files: testnet
 cardano_config_filename: "testnet-config.json"
