--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -37,6 +37,12 @@
     mode: 0700
     owner: "{{ server_username }}"
 
+- name: "Package Install | Install EPEL"
+  yum:
+    name: ['https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm']
+    state: latest
+  become: true
+
 - name: "Package Install | Install Yum Dependencies"
   yum:
     name: ['git', 'gcc', 'gcc-c++', 'gmp-devel', 'make', 'tar', 'wget', 'zlib-devel', 'jq', 'systemd-devel', 'ncurses-devel', 'ncurses-compat-libs', 'libsodium-devel']
